--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,11 @@
 <div class="footer">
-  <p>  Copyright © {{ site.time | date: '%Y' }} - <a href="/">HuS</a> - Powered by 
+  <p>  Copyright © {{ site.time | date: '%Y' }} - <a href="/">DarkScope</a> - Powered by 
     <a href="http://jekyllrb.com/">Jekyll</a>.
     <a href="http://github.com/">Github</a>
   </p>
   <ul>
     <li><a href="https://github.com/justdark"><i class="fa fa-github fa-2x"></i></a></li>
     <li><a href="http://weibo.com/idarkscope"><i class="fa fa-weibo fa-2x"></i></a></li>
+    <li><a href="darkscope.primer@gmail.com"><i class="fa fa-envelope fa-2x"></i></a></li>
   </ul>
 </div>
