--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -52,6 +52,7 @@ a:focus {
 
 
 body {
+  
   color: #515151;
   background-color: #fff;
   /*background-image: url(/public/img/bg.png);*/
@@ -61,10 +62,14 @@ body {
       -ms-text-size-adjust: 100%;
 }
 
-
+html
+{
+   border-left: outset #c83c23;
+}
 
 html,
 body {
+
   margin: 0;
   padding: 0;
   overflow-x: hidden;
@@ -81,7 +86,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Open Sans',"lucida grande", "lucida sans unicode", lucida, helvetica, "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
   font-weight: bold;
   line-height: 1.5;
-  color: #313131;
+  color: #48556a;
   letter-spacing: normal;/*字体间距*/
   word-spacing: normal;
   /*text-justify: auto;*/
@@ -389,8 +394,9 @@ svg {
   position: fixed;
   top: 0;
   bottom: 0;
+
   left: -14rem;
-  width: 14rem;
+  width: 14.15rem;
   visibility: hidden;
   overflow-y: auto;
   font-family: "PT Sans", Helvetica, Arial, sans-serif;
@@ -559,7 +565,7 @@ a.sidebar-nav-item:focus {
   margin-top: 80px;
   border: 1px solid rgb(200,200,200);
   box-shadow: 3px 5px 3px rgb(220,220,220);
-  border-radius: 3px;
+  border-radius: 10px;
 }
 .post-name {
   margin-top: 0rem;
@@ -567,6 +573,11 @@ a.sidebar-nav-item:focus {
 .post .post-heading {
   border-bottom: 1px solid #c83c23;
 }
+
+.post .post-heading-index {
+  border-bottom: 1px solid #eee;
+}
+
 .post  .post-content {
     padding: 0 25px;
 }
@@ -581,7 +592,21 @@ a.sidebar-nav-item:focus {
   -moz-transition: -moz-transform 0.3s;
   transition: transform 0.3s;
 }
+/*头像*/
+.post-heading-index img {
+  float: left;
+  height: 60px;
+  width: 60px;
+  margin: 10px;
+  -webkit-transition: -webkit-transform 0.3s;
+  -moz-transition: -moz-transform 0.3s;
+  transition: transform 0.3s;
+}
+
 .post-heading img:hover {
+  transform: rotate(15deg);
+}
+.post-heading-index img:hover {
   transform: rotate(15deg);
 }
 .page,
@@ -599,6 +624,7 @@ a.sidebar-nav-item:focus {
   font-size: 1.3rem;
   display: block;
   padding: 10px 10px 0 10px;
+
 }
 .post-title a {
     color: #3f4a60;
@@ -611,7 +637,7 @@ a.sidebar-nav-item:focus {
 .post-title .post-title-blog {
   text-decoration: none;
   cursor: default;/*无鼠标样式*/
-  color: #000;
+  color: #3f4a60;
 }
 /* Blog post or page title */
 /*.page-title,
@@ -760,7 +786,7 @@ a.sub_pagination-item:hover {
 
 /*footer*/
 .footer {
-  border-top: 1px solid #c83c23;
+  border-top: 1px solid #eee;
   font-size: 0.5rem;
   padding: 12px 0 12px 0;
   color: #777; 
