--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,9 +26,12 @@
     <a class="sidebar-nav-item" href="/tag/"><i class="fa fa-tags fa-fw"></i>&nbsp 标签·&nbspTag</a>
     <!--  <a class="sidebar-nav-item" href="/works/">works</a> -->
 
+
     <a class="sidebar-nav-item" href="/about/"><i class="fa fa-hand-o-right fa-fw"></i>&nbsp 关于·&nbspAbout</a>
+    <a class="sidebar-nav-item" href="/feed.xml"><i class="fa fa-rss fa-fw"></i>&nbsp 订阅·&nbspRSS</a>
+
     <a class="sidebar-nav-item"><input type="text" class="st-default-search-input"></a>
-    
+
   </nav>
 
   <div class="sidebar-item">
