--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -475,7 +475,7 @@ a.sidebar-nav-item:focus {
   width: 2.2rem;
   padding: .5rem .65rem;
   color: #505050;
-  background-color: #fff;
+  background-color: rgba(0,0,0,0);
   border-radius: 4px;
   cursor: pointer;
 }
@@ -496,7 +496,7 @@ a.sidebar-nav-item:focus {
 .sidebar-toggle:active,
 #sidebar-checkbox:checked ~ .sidebar-toggle {
   color: #fff;
-  background-color: #505050;
+  background-color: rgba(227,62,43,0.618);
 }
 
 
