--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -206,10 +206,15 @@ blockquote p:last-child {
 }
 
 img {
+  text-align: center;
+  margin: 0 auto;
+}
+
+/*img {
   display: block;
   margin: 0 0 1rem;
   border-radius: 5px;
-}
+}*/
 
 /* Tables */
 table {
@@ -619,9 +624,9 @@ a.sidebar-nav-item:focus {
   margin-bottom: 4em;
 }
 
-
 .post p img {
-  width: 100%;
+    text-align: center;
+  margin: 0 auto;
 }
 /*首页标题*/
 .post-title {
