--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,7 +34,16 @@
   <script src="/public/js/jquery-1.11.1.js"></script>
   <script src="/public/js/audioplayer/amazingaudioplayer.js"></script>
   <link rel="stylesheet" type="text/css" href="/public/css/audioplayer/initaudioplayer-1.css">
+  
 
 
+        <script type="text/x-mathjax-config">
+        MathJax.Hub.Config({ tex2jax: { inlineMath: [['$','$']], processEscapes: true }, TeX: { equationNumbers: { autoNumber: "AMS" } }, messageStyle: "none", SVG: { blacker: 1 }});
+    </script>
+    <script src="https://www.zybuluo.com/static/editor/libs/mathJax.js"></script>
+    <!--mathjax source code is here: https://github.com/mathjax/MathJax.-->
+    <script src="https://www.zybuluo.com/static/MathJax/MathJax.js?config=TeX-AMS-MML_SVG"></script>
+
+    <!--mathjax source code is here: https://github.com/mathjax/MathJax.-->
 
 </head>
